in patientmatching module, changed random sampling code to remove references to objects once objects are no longer needed, instead of cleaning up at the end of analysis